# ZegoVideoTalk

./: .gitattributes  .gitignore  README.md
android/videotalk/: build.gradle  demo_version.txt  sdk_pkg_info.json
android/videotalk/VideoTalk_180713_182342_release_new-0-gb73f939_bn96_udp/: build.gradle  demo_version.txt  sdk_pkg_info.json
android/videotalk/VideoTalk_180713_182342_release_new-0-gb73f939_bn96_udp/app/: build.gradle
android/videotalk/VideoTalk_180713_182342_release_new-0-gb73f939_bn96_udp/gradle/wrapper/: gradle-wrapper.properties
android/videotalk/VideoTalk_180907_104514_release_new-0-ga48958e_bn177_udp/: demo_version.txt  sdk_pkg_info.json
android/videotalk/VideoTalk_180907_104514_release_new-0-ga48958e_bn177_udp/app/: build.gradle
android/videotalk/app/: build.gradle  proguard-rules.pro
android/videotalk/app/src/main/: AndroidManifest.xml
android/videotalk/gradle/wrapper/: gradle-wrapper.properties
ios/videotalk/VideoTalk/: sdk_pkg_info.json
ios/videotalk/VideoTalk/VideoTalk/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.m  main.m
ios/videotalk/VideoTalk/VideoTalk.xcodeproj/: project.pbxproj
ios/videotalk/common/: ZegoAdvancedTableViewController.h  ZegoAdvancedTableViewController.m  ZegoAnchorOptionViewController.h  ZegoAnchorOptionViewController.m  ZegoHomeViewController.h  ZegoHomeViewController.m  ZegoInstrument.h  ZegoInstrument.m  ZegoLiveToolViewController.h  ZegoLiveToolViewController.m  ZegoLiveViewController.h  ZegoLiveViewController.m  ZegoLogTableViewController.m  ZegoManager.h  ZegoManager.m  ZegoMixStreamAnchorViewController.h  ZegoMixStreamAnchorViewController.m  ZegoMixStreamAnchorViewController.xib  ZegoMixStreamAudienceViewController.h  ZegoMixStreamAudienceViewController.m  ZegoMixStreamAudienceViewController.xib  ZegoMultiAnchorViewController.h  ZegoMultiAnchorViewController.m  ZegoMultiAnchorViewController.xib  ZegoMultiAudienceViewController.h  ZegoMultiAudienceViewController.m  ZegoPublishViewController.h  ZegoPublishViewController.m  ZegoRoomInfo.h  ZegoRoomInfo.m  ZegoRoomViewController.h  ZegoRoomViewController.m  ZegoRoomViewController.xib  ZegoSetting.h  ZegoSetting.mm  ZegoSettingTableViewController.h  ZegoSettingTableViewController.m  ZegoShareLogViewController.h  ZegoShareLogViewController.m  ZegoSingleAnchorViewController.h  (+20 more)
ios/videotalk/common/Advanced/: ZegoRenderAudienceViewController.m  ZegoRenderViewController.m  ZegoVideoFilterDemo.m  video_capture_encode_callback.h  video_capture_encode_callback.mm
ios/videotalk/common/Base.lproj/: ZegoHomeViewController.xib  ZegoLiveToolViewController.xib  ZegoPublishViewController.xib  ZegoSettingTableViewController.storyboard  ZegoSettingTableViewController.strings  ZegoTalkToolViewController.xib
ios/videotalk/common/en.lproj/: ZegoHomeViewController.strings  ZegoLiveToolViewController.strings  ZegoPublishViewController.strings  ZegoSettingTableViewController.strings  ZegoTalkToolViewController.strings
ios/videotalk/common/zh-Hans.lproj/: ZegoHomeViewController.strings  ZegoLiveToolViewController.strings  ZegoPublishViewController.strings  ZegoSettingTableViewController.strings  ZegoTalkToolViewController.strings
windows/videotalk/: sdk_pkg_info.json
windows/videotalk/VideoTalk/: CMakeLists.txt  ZegoMainDialog.qrc  ZegoSettingsDialog.ui  ZegoVideoTalkDemo.cpp  ZegoVideoTalkDemo.h  main.cpp  videotalk_en.ts  videotalk_zh.qm
windows/videotalk/VideoTalk/Base/: ZegoBase.cpp  ZegoDialog.cpp  ZegoDialog.h  ZegoVideoTalkVersion.h
windows/videotalk/VideoTalk/Build-OSX/: README.txt  build.sh  generate.sh
windows/videotalk/VideoTalk/Config/: ZegoUserConfig.cpp
windows/videotalk/VideoTalk/Device/: ZegoDeviceManager.cpp  ZegoDeviceManager.h
windows/videotalk/VideoTalk/Dialog/: ZegoMainDialog.cpp  ZegoMainDialog.h  ZegoSettingsDialog.cpp  ZegoSettingsDialog.h  ZegoVideoTalkDialog.cpp
windows/videotalk/VideoTalk/Model/: ZegoRoomMsgModel.cpp  ZegoSettingsModel.cpp  ZegoStreamModel.h  ZegoUserModel.cpp
windows/videotalk/VideoTalk/OSX_Objective-C/: ZegoAVDevice.h
windows/videotalk/VideoTalk/Resources/: res.aps  res.rc
windows/videotalk/VideoTalk/Signal/: ZegoSDKSignal.cpp  ZegoSDKSignal.h
windows/videotalk/VideoTalk/UI/: CursorPosCalculator.cpp  CursorPosCalculator.h  FramelessHelperPrivate.h  WidgetData.cpp  WidgetData.h  ZegoAVView.cpp  ZegoComboBox.cpp  ZegoComboBox.h  ZegoMicrophoneButton.cpp  ZegoProgressIndicator.cpp  ZegoSlider.h  ZegoStateButton.h  ZegoTextButton.h  frameless_helper.cpp  frameless_helper.h
windows/videotalk/VideoTalk_180823_162547_release_new-0-g241b886_bn4_udp/: CMakeLists.txt  sdk_pkg_info.json
windows/videotalk/VideoTalk_180823_162547_release_new-0-g241b886_bn4_udp/VideoTalk/: CMakeLists.txt  ZegoMainDialog.ui  ZegoMusicHookDialog.ui  ZegoVideoTalkDialog.ui  style.qrc  videotalk_en.qm  videotalk_zh.ts
windows/videotalk/build-osx/: generate.sh
windows/videotalk/build-win/: generate_x64.bat  generate_x86.bat
windows/videotalk/include/zegoliveroom/: AVDefines.h  ChatRoom.h  ChatRoomCallback.h  LiveRoom-IM.h  LiveRoom-Player.h  LiveRoom-Publisher.h  LiveRoom-ReliableMessage.h  LiveRoom.h  LiveRoomCallback-IM.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomCallback-Relay.h  LiveRoomCallback-ReliableMessage.h  LiveRoomCallback.h  LiveRoomDefines-IM.h  LiveRoomDefines-Player.h  LiveRoomDefines.h  RoomDefines.h  media_player.h  video_capture.h  zego-api-audio-aux.h  zego-api-audio-processing.h  zego-api-defines.h  zego-api-external-audio-device.h  zego-api-external-video-capture.h  zego-api-external-video-render.h  zego-api-media-side-info.h  zego-api-mix-stream.h  zego-api-sound-level.h
(+167 files in other folders)
